force-app/main/default/objects/Edfund_Partner_Contact__c/Edfund_Partner_Contact__c.object-meta.xml
<CustomObject>
    <label>Edfund Partner Contact</label>
    <nameField>
        <displayFormat>EP Contact - {0000}</displayFormat>
        <label>Edfund Partner Contact ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Edfund Partner Contacts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>