force-app/main/default/objects/Edfund_Partner_Contact__c/fields/EdFund_Partner__c.field-meta.xml
<CustomField>
    <fullName>EdFund_Partner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>EdFund Partner</label>
    <referenceTo>EdFund_Partner__c</referenceTo>
    <relationshipLabel>Edfund Partner Contacts</relationshipLabel>
    <relationshipName>Edfund_Partner_Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>