force-app/main/default/objects/Edfund_Partner_Contact__c/fields/Partner_Contact_Types__c.field-meta.xml
<CustomField>
    <fullName>Partner_Contact_Types__c</fullName>
    <label>Partner Contact Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Administrator</fullName>
            </value>
            <value>
                <fullName>Bargainer</fullName>
            </value>
            <value>
                <fullName>Chief Operating Officer</fullName>
            </value>
            <value>
                <fullName>Corporate Labor Relations Counsel</fullName>
            </value>
            <value>
                <fullName>CPO</fullName>
            </value>
            <value>
                <fullName>Director of Operations</fullName>
            </value>
            <value>
                <fullName>Director of Regulatory Affairs and Privacy Officer</fullName>
            </value>
            <value>
                <fullName>Executive Vice President</fullName>
            </value>
            <value>
                <fullName>Human Resources Business Partner</fullName>
            </value>
            <value>
                <fullName>Human Resources Director</fullName>
            </value>
            <value>
                <fullName>Human Resources Manager</fullName>
            </value>
            <value>
                <fullName>Legal Counsel</fullName>
            </value>
            <value>
                <fullName>Pending Title</fullName>
            </value>
            <value>
                <fullName>President</fullName>
            </value>
            <value>
                <fullName>Regional Director</fullName>
            </value>
            <value>
                <fullName>Regional Director of Operations Bay Area</fullName>
            </value>
            <value>
                <fullName>Regional Manager</fullName>
            </value>
            <value>
                <fullName>Regional Vice President</fullName>
            </value>
            <value>
                <fullName>Regional Vice President of Operations</fullName>
            </value>
            <value>
                <fullName>Sr. VP of Policy &amp;amp; Training Development</fullName>
            </value>
            <value>
                <fullName>Talent Acquisition Manager</fullName>
            </value>
            <value>
                <fullName>Test Contact Type for Partner v2</fullName>
            </value>
            <value>
                <fullName>Vice President</fullName>
            </value>
            <value>
                <fullName>Vice President Human Resources</fullName>
            </value>
            <value>
                <fullName>Vice President of Education and CQI</fullName>
            </value>
            <value>
                <fullName>Vice President Operations North</fullName>
            </value>
            <value>
                <fullName>Administrator[11]</fullName>
                <isActive>false</isActive>
                <label>Administrator[11]</label>
            </value>
            <value>
                <fullName>Bargainer[7]</fullName>
                <isActive>false</isActive>
                <label>Bargainer[7]</label>
            </value>
            <value>
                <fullName>CPO[22]</fullName>
                <isActive>false</isActive>
                <label>CPO[22]</label>
            </value>
            <value>
                <fullName>Chief Operating Officer[9]</fullName>
                <isActive>false</isActive>
                <label>Chief Operating Officer[9]</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>