force-app/main/default/objects/Edfund_Partner_Contact__c/fields/Phone_Number_02__c.field-meta.xml
<CustomField>
    <fullName>Phone_Number_02__c</fullName>
    <label>Phone Number 02</label>
    <type>Phone</type>
</CustomField>